--- a/event_management_app/web/index.html
+++ b/event_management_app/web/index.html
@@ -1,19 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
@@ -31,8 +18,31 @@
 
   <title>event_management_app</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Add Firebase SDK scripts here -->
+  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-storage.js"></script>
+
 </head>
 <body>
+  <script>
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: 'AIzaSyCqRZ5URuUK_ewIXEW0_7yIX2eO0v36XBI',
+      appId: '1:28661019517:web:528303b48e9119e8ce1214',
+      messagingSenderId: '28661019517',
+      projectId: 'event-management-1099',
+      authDomain: 'event-management-1099.firebaseapp.com',
+      storageBucket: 'event-management-1099.appspot.com'
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
+  
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
