--- a/event_management_app/web/index.html
+++ b/event_management_app/web/index.html
@@ -20,29 +20,15 @@
   <link rel="manifest" href="manifest.json">
 
   <!-- Add Firebase SDK scripts here -->
-  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-storage.js"></script>
 
+  <!-- Include the Firebase initialization script -->
+  <script src="assets/firebase-init.js"></script>
 </head>
 <body>
-  <script>
-    // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: 'AIzaSyCqRZ5URuUK_ewIXEW0_7yIX2eO0v36XBI',
-      appId: '1:28661019517:web:528303b48e9119e8ce1214',
-      messagingSenderId: '28661019517',
-      projectId: 'event-management-1099',
-      authDomain: 'event-management-1099.firebaseapp.com',
-      storageBucket: 'event-management-1099.appspot.com'
-    };
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-  </script>
-  
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
